[package]
description = "Vast Account Management"
homepage = "http://vast.io"
license = "GPL-3.0"
name = "vastcore-accounts"
version = "0.1.0"
authors = ["Vast Technologies <admin@vast.io>"]
edition = "2018"

[dependencies]
vastkey = { path = "vastkey" }
vaststore = { path = "vaststore" }
log = "0.4"
vast-crypto = { version = "0.4.2", features = ["publickey"] }
parking_lot = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
vast-types = "0.8.0"
tempdir = "0.3"
