[package]
description = "Vast EVM Implementation"
name = "evmbin"
version = "0.1.0"
authors = ["Vast Technologies <admin@vast.io>"]
edition = "2018"

[[bin]]
name = "vast-evm"
path = "./src/main.rs"

[dependencies]
account-state = { path = "../vastcore/account-state" }
common-types = { path = "../vastcore/types", features = ["test-helpers"] }
docopt = "1.0"
env_logger = "0.5"
vastcore = { path = "../vastcore", features = ["test-helpers", "json-tests"] }
vast-types = "0.8.0"
vastjson = { path = "../json", features = ["test-helpers"] }
evm = { path = "../vastcore/evm" }
panic_hook = { path = "../util/panic-hook" }
vast-bytes = "0.1"
pod = { path = "../vastcore/pod" }
rustc-hex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spec = { path = "../vastcore/spec" }
trace = { path = "../vastcore/trace" }
vm = { path = "../vastcore/vm" }

[dev-dependencies]
criterion = "0.3"
tempdir = "0.3"

[features]
evm-debug = ["vastcore/evm-debug-tests"]

[[bench]]
name = "mod"
harness = false
