[package]
description = "Vast JSON Deserialization"
name = "vastjson"
version = "0.1.0"
authors = ["Vast Technologies <admin@vast.io>"]
edition = "2018"

[dependencies]
vast-types = "0.8.0"
rustc-hex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
macros = { path = "../util/macros" }

[features]
test-helpers = []
