[package]
description = "Vast Miner Interface."
name = "vastcore-miner"
homepage = "http://vast.io"
license = "GPL-3.0"
version = "1.12.0"
authors = ["Vast Technologies <admin@vast.io>"]

[dependencies]
# Only work_notify, consider a separate crate
vastash = { path = "../vastash", optional = true }
fetch = { path = "../util/fetch", optional = true }
hyper = { version = "0.12", optional = true }
url = { version = "2", optional = true }

# Miner
ansi_term = "0.11"
common-types = { path = "../vastcore/types" }
vastabi = "9.0.1"
vastabi-derive = "9.0.1"
vastabi-contract = "9.0.0"
vastcore-call-contract = { path = "../vastcore/call-contract" }
vast-types = "0.8.0"
futures = "0.1"
vast-util-mem = "0.3.0"
keccak-hash = "0.4.0"
linked-hash-map = "0.5"
log = "0.4"
vast-runtime = { path = "../util/runtime" }
parking_lot = "0.9"
price-info = { path = "./price-info", optional = true }
registrar = { path = "../util/registrar" }
rlp = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
trace-time = "0.1"
transaction-pool = "2.0.1"

[dev-dependencies]
env_logger = "0.5"
vast-crypto = { version = "0.4.2", features = ["publickey"] }
rustc-hex = "1.0"

[features]
work-notify = ["vastash", "fetch", "hyper", "url"]
