[package]
description = "Vast JSON-RPC Servers (WS, HTTP, IPC)"
name = "vast-rpc"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Vast Technologies <admin@vast.io>"]

[lib]

[dependencies]
ansi_term = "0.11"
cid = "0.3"
futures = "0.1.6"
log = "0.4"
multihash = "0.8"
order-stat = "0.1"
rand = "0.7"
rand_xorshift = "0.2"
rustc-hex = "1.0"
semver = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
parking_lot = "0.9"
tempdir = "0.3"
tiny-keccak = "1.4"
tokio-timer = "0.1"
transient-hashmap = "0.4"
itertools = "0.5"

jsonrpc-core = "14.0.5"
jsonrpc-derive = "14.0.5"
jsonrpc-http-server = "14.0.5"
jsonrpc-ws-server = "14.0.5"
jsonrpc-ipc-server = "14.0.6"
jsonrpc-pubsub = "14.0.5"

client-traits = { path = "../vastcore/client-traits" }
common-types = { path = "../vastcore/types" }
engine = { path = "../vastcore/engine" }
vastash = { path = "../vastash" }
vastcore = { path = "../vastcore" }
vastcore-accounts = { path = "../accounts", optional = true }
vastcore-light = { path = "../vastcore/light" }
vastcore-logger = { path = "../vast/logger" }
vastcore-miner = { path = "../miner" }
vastcore-network = { path = "../util/network" }
vastcore-private-tx = { path = "../vastcore/private-tx" }
vastcore-sync = { path = "../vastcore/sync" }
vast-types = "0.8.0"
fastmap = { path = "../util/fastmap" }
machine = { path = "../vastcore/machine" }
vast-bytes = "0.1"
vast-crypto = { version = "0.4.2", features = ["publickey"] }

eip-712 = { path = "../util/EIP-712" }
vastjson = { path = "../json" }
vastkey = { path = "../accounts/vastkey" }
vaststore = { path = "../accounts/vaststore" }
fetch = { path = "../util/fetch" }
keccak-hash = "0.4.0"
vast-runtime = { path = "../util/runtime" }
vast-updater = { path = "../updater" }
vast-version = { path = "../util/version" }
rlp = "0.4.0"
account-state = { path = "../vastcore/account-state" }
snapshot = { path = "../vastcore/snapshot" }
stats = { path = "../util/stats" }
trace = { path = "../vastcore/trace" }
vm = { path = "../vastcore/vm" }

[dev-dependencies]
client-traits = { path = "../vastcore/client-traits" }
vastcore = { path = "../vastcore", features = ["test-helpers"] }
vastcore-accounts = { path = "../accounts" }
vastcore-io = { path = "../util/io" }
vastcore-network = { path = "../util/network" }
vastjson = { path = "../json", features = ["test-helpers"] }
fake-fetch = { path = "../util/fake-fetch" }
macros = { path = "../util/macros" }
spec = { path = "../vastcore/spec" }
pretty_assertions = "0.1"
transaction-pool = "2.0.1"
verification = { path = "../vastcore/verification" }

[features]
accounts = ["vastcore-accounts"]
