[package]
description = "Vast (VastCore) Secret Store"
name = "vastcore-secretstore"
version = "1.0.0"
license = "GPL-3.0"
authors = ["Vast Technologies <admin@vast.io>"]

[dependencies]
byteorder = "1.0"
vastabi = "9.0.1"
vastabi-contract = "9.0.0"
vastabi-derive = "9.0.1"
vast-types = "0.8.0"
vastkey = { path = "../accounts/vastkey", optional = true }
futures = "0.1"
hyper = { version = "0.12", default-features = false }
keccak-hash = "0.4.0"
kvdb = "0.3.1"
kvdb-rocksdb = "0.4.1"
lazy_static = "1.0"
log = "0.4"
vast-bytes = "0.1"
vast-crypto = { version = "0.4.2", features = ["publickey"] }
vast-runtime = { path = "../util/runtime" }
parking_lot = "0.9"
percent-encoding = "2.1.0"
rustc-hex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tiny-keccak = "1.4"
tokio = "0.1.22"
tokio-io = "0.1"
tokio-service = "0.1"
url = "2.1.0"
jsonrpc-server-utils = "14.0.3"

[dev-dependencies]
env_logger = "0.5"
tempdir = "0.3"
kvdb-rocksdb = "0.4.1"
