[package]
description = "Vast Updater Service."
name = "vast-updater"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Vast Technologies <admin@vast.io>"]

[dependencies]
client-traits = { path = "../vastcore/client-traits" }
common-types = { path = "../vastcore/types" }
vastabi = "9.0.1"
vastabi-contract = "9.0.0"
vastabi-derive = "9.0.1"
vastcore = { path = "../vastcore" }
vastcore-sync = { path = "../vastcore/sync" }
vast-types = "0.8.0"
keccak-hash = "0.4.0"
lazy_static = "1.0"
log = "0.4"
vast-bytes = "0.1"
vast-hash-fetch = { path = "hash-fetch" }
vast-path = "0.1"
vast-version = { path = "../util/version" }
rand = "0.7"
parking_lot = "0.9"
semver = "0.9"
target_info = "0.1"

[dev-dependencies]
vastcore = { path = "../vastcore", features = ["test-helpers"] }
tempdir = "0.3"
matches = "0.1"

[features]
# hardcode version number 1.3.7 of vast to force an update
# in order to manually test that vast fall-over to the local version
# in case of invalid or deprecated command line arguments are entered
test-updater = []
