[package]
description = "Vast Vastash & ProgPoW Implementations"
name = "vastash"
version = "1.12.0"
authors = ["Vast Technologies <admin@vast.io>"]

[dependencies]
common-types = { path = "../vastcore/types" }
either = "1.0.0"
vast-types = "0.8.0"
keccak-hash = "0.4.0"
log = "0.4"
memmap = "0.6"
parking_lot = "0.9"
primal = "0.2.3"
static_assertions = "0.3.3"

[dev-dependencies]
criterion = "0.3"
rustc-hex = "1.0"
serde_json = "1.0"
tempdir = "0.3"

[features]
default = []
bench = []

[[bench]]
name = "basic"
harness = false
required-features = ['bench']

[[bench]]
name = "progpow"
harness = false
required-features = ['bench']
