[package]
description = "Vast Key Management"
name = "vaststore"
version = "0.2.1"
authors = ["Vast Technologies <admin@vast.io>"]

[dependencies]
log = "0.4"
libc = "0.2"
rand = "0.7"
vastkey = { path = "../vastkey" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-hex = "1.0"
tiny-keccak = "1.4"
time = "0.1.34"
itertools = "0.5"
parking_lot = "0.9"
vast-crypto = { version = "0.4.2", features = ["publickey"] }
vast-types = "0.8.0"
dir = { path = "../../util/dir" }
smallvec = "0.6"
vast-wordlist = "1.0"
tempdir = "0.3"

[dev-dependencies]
matches = "0.1"

[lib]
