[package]
description = "Vast RPC Client"
homepage = "http://vast.io"
license = "GPL-3.0"
name = "vast-rpc-client"
version = "1.4.0"
authors = ["Vast <admin@vast.io>"]

[dependencies]
vast-types = "0.8.0"
futures = "0.1"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
url = "2.1.0"
matches = "0.1"
parking_lot = "0.9"
jsonrpc-core = "14.0.3"
jsonrpc-ws-server = "14.0.3"
vast-rpc = { path = "../../rpc" }
keccak-hash = "0.4.0"
