[package]
name = "vast-local-store"
description = "Manages persistent local node data."
version = "0.1.0"
authors = ["Vast Technologies <admin@vast.io>"]
edition = "2018"

[dependencies]
common-types = { path = "../../vastcore/types" }
vastcore-io = { path = "../../util/io" }
kvdb = "0.3.1"
log = "0.4"
rlp = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
vastkey = { path = "../../accounts/vastkey" }
vast-crypto = { version = "0.4.2", features = ["publickey"] }
kvdb-memorydb = "0.3.1"
