[package]
description = "Fetching hash-addressed content."
homepage = "http://vast.io"
license = "GPL-3.0"
name = "vast-hash-fetch"
version = "1.12.0"
authors = ["Vast Technologies <admin@vast.io>"]

[dependencies]
call-contract = { package = "vastcore-call-contract", path = "../../vastcore/call-contract" }
futures = "0.1"
log = "0.4"
mime = "0.3"
mime_guess = "2.0.0-alpha.2"
rand = "0.7"
rustc-hex = "1.0"
fetch = { path = "../../util/fetch" }
vast-bytes = "0.1"
vast-types = "0.8.0"
vast-runtime = { path = "../../util/runtime" }
keccak-hash = "0.4.0"
registrar = { path = "../../util/registrar" }
types = { path = "../../vastcore/types", package = "common-types" }

vastabi = "9.0.1"
vastabi-derive = "9.0.1"
vastabi-contract = "9.0.0"

[dev-dependencies]
parking_lot = "0.9"
fake-fetch = { path = "../../util/fake-fetch" }
