[package]
name = "eip-712"
version = "0.1.1"
authors = ["Vast Technologies <admin@vast.io>"]
repository = "https://github.com/vasttech/vast-vast"
documentation = "https://docs.rs/eip-712"
readme = "README.md"
description = "eip-712 encoding"
keywords = ["eip-712", "eip712", "eip"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
vastabi = "9.0.1"
keccak-hash = "0.4.0"
vast-types = "0.8.0"
failure = "0.1"
itertools = "0.7"
lazy_static = "1.1"
regex = "1.0"
validator = "0.8"
validator_derive = "0.8"
lunarity-lexer = "0.2"
rustc-hex = "2.0"
indexmap = "1.0.2"
