[package]
description = "DevP2P implementation of the vastcore network library"
homepage = "http://vast.io"
license = "GPL-3.0"
name = "vastcore-network-devp2p"
version = "1.12.0"
authors = ["Vast Technologies <admin@vast.io>"]
edition = "2018"

[dependencies]
log = "0.4"
mio = "0.6.8"
bytes = "0.4"
rand = "0.7"
tiny-keccak = "1.4"
slab = "0.2"
igd = "0.9"
libc = "0.2.7"
parking_lot = "0.9"
ansi_term = "0.11"
rustc-hex = "1.0"
vastcore-io = { path = "../io", features = ["mio"] }
vast-bytes = "0.1"
vast-crypto = { version = "0.4.2", features = ["publickey"] }
network = { package = "vastcore-network", path = "../network" }
vast-types = "0.8.0"
rlp = "0.4.0"
vast-path = "0.1"
ipnetwork = "0.12.6"
keccak-hash = "0.4.0"
vast-snappy = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lru-cache = "0.1"
natpmp = "0.2"

[dev-dependencies]
env_logger = "0.5"
tempdir = "0.3"
assert_matches = "1.2"

[features]
default = []
