[package]
description = "vast vm builtin"
name = "vastcore-builtin"
version = "0.1.0"
authors = ["Vast Technologies <admin@vast.io>"]
edition = "2018"

[dependencies]
bn = { git = "https://github.com/vasttech/bn", default-features = false }
byteorder = "1.3.2"
common-types = { path = "../types" }
eip-152 = { path = "../../util/EIP-152" }
vast-types = "0.8.0"
vastjson = { path = "../../json" }
keccak-hash = "0.4.0"
log = "0.4"
num = { version = "0.1", default-features = false, features = ["bigint"] }
vast-bytes = "0.1"
vast-crypto = { version = "0.4.2", features = ["publickey"] }

[dev-dependencies]
hex-literal = "0.2.1"
macros = { path = "../../util/macros" }
