[package]
description = "Vastcore DB access utilities"
homepage = "http://vast.io"
license = "GPL-3.0"
name = "vastcore-db"
version = "0.1.0"
authors = ["Vast Technologies <admin@vast.io>"]
edition = "2018"

[dependencies]
common-types = { path = "../types" }
vast-types = "0.8.0"
kvdb = "0.3.1"
vast-util-mem = "0.3.0"
parking_lot = "0.9"
rlp = "0.4.0"
rlp_derive = { path = "../../util/rlp-derive" }
