[package]
description = "Execute transactions producing a receipt and an optional trace."
name = "executive-state"
version = "0.1.0"
authors = ["Vast Technologies <admin@vast.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
account-db = { path = "../account-db" }
account-state = { path = "../account-state" }
bytes = { package = "vast-bytes", version = "0.1.0" }
common-types = { path = "../types" }
vast-types = "0.8.0"
hash-db = "0.15.0"
keccak-hasher = { path = "../../util/keccak-hasher" }
kvdb = "0.3.1"
log = "0.4.8"
machine = { path = "../machine" }
trace = { path = "../trace" }
trie-vm-factories = { path = "../trie-vm-factories" }
vm = { path = "../vm" }

[dev-dependencies]
env_logger = "0.5"
vastcore = { path = "..", features = ["test-helpers"] }
vast-crypto = { version = "0.4.2", features = ["publickey"] }
evm = { path = "../evm" }
keccak-hash = "0.4.0"
pod = { path = "../pod" }
rustc-hex = "1.0"
spec = { path = "../spec" }
trie-db = "0.18.0"
vasttrie = { package = "patricia-trie-vast", path = "../../util/patricia-trie-vast" }
